<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:http="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_margin="8dp"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/openButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/open_button_text"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_movie_black_24dp"/>

        <ImageButton
            android:id="@+id/playButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/play_button_text"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_play_arrow_black_24dp"/>

        <ImageButton
            android:id="@+id/stopButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/stop_button_text"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_stop_black_24dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/video_source"/>
</LinearLayout>